<resources>
    <string name="app_name">Sticky Notes!</string>
    <string name="button_refresh">Refresh</string>

    <string name="list_of_notes_id">note id:</string>
    <string name="list_of_notes_id_value">[id]</string>
    <string name="list_of_notes_title_value">[title]</string>
    <string name="list_of_notes_body_value">[body]</string>
    <string name="list_of_notes_date">created:</string>
    <string name="list_of_notes_date_value">[date]</string>
    <!--<string name="list_of_notes_noteChecked_value">[noteChecked]</string>-->
    <string name="list_of_notes_done">done?</string>
    <string name="list_of_notes_done_value">[done]</string>
</resources>
